add section programs

--- a/src/index.html
+++ b/src/index.html
@@ -598,10 +598,12 @@
                 </div>
                 <!-- right side start -->
                 <div class="lg:max-w-[439px] pt-7.5">
-                    <p class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow fadeInUp">About Us</p>
+                    <p class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">About Us
+                    </p>
                     <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] pb-5 wow animate__animated animate__fadeInUp"
                         data-wow-delay=".5s">Unlocking Potential, One Child at a just Time in school</h2>
-                    <p class="wow animate__animated animate__fadeInUp" data-wow-delay=".4s">Lorem ipsum dolor sit amet consectetur. Amet lectus mi
+                    <p class="wow animate__animated animate__fadeInUp" data-wow-delay=".4s">Lorem ipsum dolor sit amet
+                        consectetur. Amet lectus mi
                         ultricies dictum facilisis sem. Imperdiet
                         massa turpis sit proin metus volutpat loren ipsum Lorem ipsum dolor sit amet consectetur. Amet
                         lectus mi ultricies dictum</p>
@@ -613,7 +615,127 @@
             </div>
         </div>
     </section>
-    <section class="programs"></section>
+    <section class="programs lg:pt-15 pt-10 lg:pb-15 pb-10 relative">
+        <div class="container mx-auto px-4 py-5">
+            <div class="program_text text-center flex flex-col items-center">
+                <p class="text-[var(--green-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">Educational
+                    Programs</p>
+                <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] lg:max-w-[630px] wow animate__animated animate__fadeInUp"
+                    data-wow-delay=".3s">Strong Foundation for Success For Nurturing Curiosityl</h2>
+            </div>
+            <div class="program_content lg:pl-11">
+                <div class="grid md:grid-cols-2 grid-cols-1 gap-y-7.5 lg:gap-x-[74px] gap-x-5 lg:pt-15 pt-10">
+                    <!-- card start -->
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                        data-wow-delay=".3s">
+                        <div
+                            class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
+                            <i class="icon-car-toy fa-solid fa-car-side md:text-6xl text-[40px]"></i>
+                        </div>
+                        <div class="lg:pl-11 mt-4 lg:mt-0">
+                            <h4>
+                                <a href="service-details.html"
+                                    class="font-semibold lg:text-2xl text-xl group-hover/card:text-[var(--green-foreground)] transition-all duration-500">Online
+                                    Class</a>
+                            </h4>
+                            <p class="lg:mt-4 mt-3">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
+                                ,osr of a proin mollis pretium facilisi in, ligula volutpat </p>
+                            <a href="service-details.html"
+                                class="inline-flex items-center gap-2.5 lg:mt-7.5 mt-4 group/btn">
+                                <span class="group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">Read
+                                    More</span>
+                                <span
+                                    class="group-hover/btn:ml-1 group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- card end -->
+                    <!-- card start -->
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                        data-wow-delay=".4s">
+                        <div
+                            class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
+                            <i class="icon-toys fa-solid fa-graduation-cap md:text-6xl text-[40px]"></i>
+                        </div>
+                        <div class="lg:pl-11 mt-4 lg:mt-0">
+                            <h4>
+                                <a href="service-details.html"
+                                    class="font-semibold lg:text-2xl text-xl group-hover/card:text-[var(--green-foreground)] transition-all duration-500">Formal
+                                    Tuition</a>
+                            </h4>
+                            <p class="lg:mt-4 mt-3">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
+                                ,osr of a proin mollis pretium facilisi in, ligula volutpat </p>
+                            <a href="service-details.html"
+                                class="inline-flex items-center gap-2.5 lg:mt-7.5 mt-4 group/btn">
+                                <span class="group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">Read
+                                    More</span>
+                                <span
+                                    class="group-hover/btn:ml-1 group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- card end -->
+                    <!-- card start -->
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                        data-wow-delay=".5s">
+                        <div
+                            class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
+                            <i class="icon-feeder fa-solid fa-user md:text-6xl text-[40px]"></i>
+                        </div>
+                        <div class="lg:pl-11 mt-4 lg:mt-0">
+                            <h4>
+                                <a href="service-details.html"
+                                    class="font-semibold lg:text-2xl text-xl group-hover/card:text-[var(--green-foreground)] transition-all duration-500">Preschool</a>
+                            </h4>
+                            <p class="lg:mt-4 mt-3">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
+                                ,osr of a proin mollis pretium facilisi in, ligula volutpat </p>
+                            <a href="service-details.html"
+                                class="inline-flex items-center gap-2.5 lg:mt-7.5 mt-4 group/btn">
+                                <span class="group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">Read
+                                    More</span>
+                                <span
+                                    class="group-hover/btn:ml-1 group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- card end -->
+                    <!-- card start -->
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                        data-wow-delay=".6s">
+                        <div
+                            class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
+                            <i class="icon-book fa-solid fa-book md:text-6xl text-[40px]"></i>
+                        </div>
+                        <div class="lg:pl-11 mt-4 lg:mt-0">
+                            <h4>
+                                <a href="service-details.html"
+                                    class="font-semibold lg:text-2xl text-xl group-hover/card:text-[var(--green-foreground)] transition-all duration-500">Special
+                                    Tuition</a>
+                            </h4>
+                            <p class="lg:mt-4 mt-3">Lorem ipsum dolor sit amet consectetur adipiscing elit platea the
+                                ,osr of a proin mollis pretium facilisi in, ligula volutpat </p>
+                            <a href="service-details.html"
+                                class="inline-flex items-center gap-2.5 lg:mt-7.5 mt-4 group/btn">
+                                <span class="group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">Read
+                                    More</span>
+                                <span
+                                    class="group-hover/btn:ml-1 group-hover/btn:text-[var(--green-foreground)] transition-all duration-500">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- card end -->
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="portfolio"></section>
     <section class="service"></section>
     <section class="faq"></section>
